--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <p>
         <h2>Contact Info</h2>
         <ul>
-            <li>Email <a href="shreyamishra9618@gmail.com">shreyamishra9618@gmail.com</a> </li>
-            <li>Git hub  <a href="https://github.com/shreyamishra9618">shreyamishra9618</a></li>
-            <li>Portfolio <a href="Coming Soon">coming soon </a></li>
+            <li><strong>Email:</strong> <a href="shreyamishra9618@gmail.com">shreyamishra9618@gmail.com</a> </li>
+            <li><strong>Git hub:</strong> hub  <a href="https://github.com/shreyamishra9618">shreyamishra9618</a></li>
+            <li><strong> Portfolio:</strong><a href="Coming Soon">coming soon </a></li>
             
           </ul> 
     </p>
